fix mobile-layout issues

--- a/src/main/assets/less/core.less
+++ b/src/main/assets/less/core.less
@@ -540,3 +540,14 @@ md-toast.md-toast-error-theme .md-toast-content{
   margin-top: -(@map-marker-size - 2) !important;
   font-size: @map-marker-size;
 }
+
+.filter-button-container {
+  display: inline-block;
+  position: relative;
+  padding: 2px;
+  margin: 18px 0;
+  vertical-align: middle;
+}
+form .filter-button-container {
+  margin-top: 0;
+}
